--- a/chat.html
+++ b/chat.html
@@ -1902,7 +1902,7 @@
                             <i class="fas fa-broom"></i>
                         </button>
                     </div>
-                    <div class="credit">Powered by a_lonely_ooo</div>
+                    <div class="credit">Nex GPT early access</div>
                 </div>
             </div>
         </div>
@@ -2765,3 +2765,4 @@
     </script>
 </body>
 </html>
+
